Basic renaming for compatibility with Pyronia LSM

--- a/parser/parser.conf
+++ b/parser/parser.conf
@@ -18,13 +18,13 @@
 #verbose
 
 ## Set additional include path
-#Include /etc/apparmor.d/
+#Include /etc/pyronia.d/
 # or
-#Include /usr/share/apparmor
+#Include /usr/share/pyronia
 
 
 ## Set location of apparmor filesystem
-#subdomainfs /sys/kernel/security/apparmor
+#subdomainfs /sys/kernel/security/pyronia
 
 ## Set match-string to use - for forcing compiler to treat different kernels
 ## the same
