--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,69 @@
 cscope.*
+autom4te.cache/
+Makefile.in
+Makefile
+*.o
+*.lo
+*.mo
+*.so
+*.vim
+*.2
+*.3
+*.5
+
+libraries/libapparmor/aclocal.m4
+libraries/libapparmor/configure
+libraries/libapparmor/ltmain.sh
+profiles/apparmor.d/local/
+binutils/aa-enabled
+binutils/aa-exec
+libraries/libapparmor/config.log
+libraries/libapparmor/config.status
+libraries/libapparmor/libtool
+libraries/libapparmor/src/.deps/
+libraries/libapparmor/src/.libs/
+libraries/libapparmor/src/af_protos.h
+libraries/libapparmor/src/grammar.c
+libraries/libapparmor/src/grammar.h
+libraries/libapparmor/src/libapparmor.la
+libraries/libapparmor/src/libapparmor.pc
+libraries/libapparmor/src/scanner.c
+libraries/libapparmor/src/scanner.h
+libraries/libapparmor/swig/perl/LibAppArmor.bs
+libraries/libapparmor/swig/perl/LibAppArmor.pm
+libraries/libapparmor/swig/perl/MYMETA.json
+libraries/libapparmor/swig/perl/MYMETA.yml
+libraries/libapparmor/swig/perl/Makefile.PL
+libraries/libapparmor/swig/perl/Makefile.perl
+libraries/libapparmor/swig/perl/Makefile.perle
+libraries/libapparmor/swig/perl/blib/
+libraries/libapparmor/swig/perl/libapparmor_wrap.c
+libraries/libapparmor/swig/perl/pm_to_blib
+libraries/libapparmor/swig/python/LibAppArmor.py
+libraries/libapparmor/swig/python/build/
+libraries/libapparmor/swig/python/libapparmor_wrap.c
+libraries/libapparmor/swig/python/setup.py
+libraries/libapparmor/testsuite/.deps/
+libraries/libapparmor/testsuite/.libs/
+libraries/libapparmor/testsuite/home.pyronia.kernel_permissions_checker_test
+libraries/libapparmor/testsuite/home.pyronia.kernel_permissions_checker_test_py
+libraries/libapparmor/testsuite/kernel_permissions_checker.c
+libraries/libapparmor/testsuite/kernel_permissions_checker_test.py
+libraries/libapparmor/testsuite/test_multi.multi
+libraries/libsmv/CMakeCache.txt
+libraries/libsmv/CMakeFiles/
+libraries/libsmv/cmake_install.cmake
+libraries/libsmv/install_api.sh
+libraries/libsmv/testcases/memdom_ops_test
+parser/af_names.h
+parser/apparmor_parser
+parser/cap_names.h
+parser/libapparmor_re/libapparmor_re.a
+parser/libapparmor_re/parse.cc
+parser/parser_lex.c
+parser/parser_version.h
+parser/parser_yacc.c
+parser/parser_yacc.h
+utils/build/
+utils/vim/apparmor.vim.5.html
+utils/vim/pod2htmd.tmp
