Implement the kernel communication channel (SI part) (#11)
* Add API for opening a netlink socket to receive kernel callstack request upcalls
* Spawn separate SI thread

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Makefile
 *.2
 *.3
 *.5
+*.*~
 
 libraries/libapparmor/aclocal.m4
 libraries/libapparmor/configure
@@ -45,16 +46,10 @@ libraries/libapparmor/swig/python/libapparmor_wrap.c
 libraries/libapparmor/swig/python/setup.py
 libraries/libapparmor/testsuite/.deps/
 libraries/libapparmor/testsuite/.libs/
-libraries/libapparmor/testsuite/home.pyronia.kernel_permissions_checker_test
-libraries/libapparmor/testsuite/home.pyronia.kernel_permissions_checker_test_py
-libraries/libapparmor/testsuite/kernel_permissions_checker.c
-libraries/libapparmor/testsuite/kernel_permissions_checker_test.py
 libraries/libapparmor/testsuite/test_multi.multi
-libraries/libsmv/CMakeCache.txt
-libraries/libsmv/CMakeFiles/
-libraries/libsmv/cmake_install.cmake
-libraries/libsmv/install_api.sh
-libraries/libsmv/testcases/memdom_ops_test
+libraries/*/CMakeCache.txt
+libraries/*/CMakeFiles/
+libraries/*/cmake_install.cmake
 parser/af_names.h
 parser/apparmor_parser
 parser/cap_names.h
