Compute hash of callstack directly

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,8 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -g ${LIBNL3_CFLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -g ${LIBNL3_CFLAGS}")
 #set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-add_library(pyronia SHARED memdom_avl_tree.c security_context.c serialization.c si_comm.c pyronia_lib.c benchmarking_util.c)
+add_library(pyronia_opt SHARED stack_log_wrappers.c)
+add_library(pyronia SHARED memdom_avl_tree.c policy_avl_tree.c security_context.c serialization.c si_comm.c pyronia_lib.c benchmarking_util.c)
 
-target_link_libraries(pyronia ${LIBNL3_LIBRARIES} smv pthread)
+target_link_libraries(pyronia ${LIBNL3_LIBRARIES} smv pthread crypto ssl)
+target_link_libraries(pyronia_opt pyronia)
