--- a/libsmv/CMakeLists.txt
+++ b/libsmv/CMakeLists.txt
@@ -16,7 +16,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -g")
 add_library(smv_lib SHARED smv_lib.c)
 add_library(memdom_lib SHARED memdom_lib.c mem_benchmarking_util.c)
 add_library(kernel_comm SHARED kernel_comm.c)
-add_library(smv SHARED smv_lib.c memdom_lib.c kernel_comm.c)
+add_library(smv SHARED smv_lib.c memdom_lib.c mem_benchmarking_util.c kernel_comm.c)
 
 target_link_libraries(smv smv_lib memdom_lib kernel_comm pthread) 
 
